gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag15669.d
version https://git-lfs.github.com/spec/v1
oid sha256:78bd276a3ceb8f26de5020795d760d8eb7a6a63bb0dfaa6c1b44195dcfbffd90
size 216
